# LGC2

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  DCO.txt  LB_calcul_3D_CCS_IP_8_HLS_4.lgc  NOTICE.md  PRE-COMMIT-GUIDE.md  README.md  REUSE.toml  Readme_sag.txt  SC.lgc2  SCT_file_Brad.lgc  apriTest.lgc  apricovMat.txt  constraintChoice.lgc2  constraint_test.lgc2  constraint_test_flat.lgc2  createSagExample.py  estimateSagBearing.lgc  estimateSagCenter.lgc  global_good.lgc2  huberTest.py  inclTest.lgc  libr_test.lgc  maskTest.lgc  measure_time.txt  new_slave_input.lgc  pointCovar.lgc  sagTest.lgc  sagTestDerivatives.lgc  setup-pre-commit.sh  slave_test_2.lgc  slave_test_2.lgc2  slave_test_3.lgc  test.lgc  wps_test.lgc  (+1 more)
Source/: CMakeLists.txt  CMakeSetup.rc  lgc++.cpp
Source/ContributionsGenerators/: CMakeLists.txt  TALS2DOffMeasContribGenerator.cpp  TALSWPSMeasContribGenerator.cpp  TALSWTWMeasContribGenerator.cpp  TLGCObsLSContributionGenerator.cpp  TLSFreeCnstrCG.cpp  TLSLocalSys2DOffMeasCG.cpp  TLSLocalSysWPSMeasCG.cpp  TLSLocalSysWTWMeasCG.cpp
Source/LGC++/: CMakeLists.txt
Source/LGCConverters/: CMakeLists.txt  EDMConverter.cpp  EDMSpatialDistConverter.cpp  GyroscopeConverter.cpp  GyroscopeStationConverter.cpp  InstrumentsConverter.cpp  LevelConverter.cpp  LevelStationConverter.cpp  OffsetToSpatialLineConverter.cpp  OffsetToVerticalLineConverter.cpp  OffsetToVerticalPlaneConverter.cpp  PolarConverter.cpp  ScaleConverter.cpp  TALGCConverter.cpp  TAngleObsConverter.cpp  TGyroOrientationConverter.cpp  THorAngleConverter.cpp  THorDistConverter.cpp  TLengthObsConverter.cpp  TObservationConverter.cpp  TOffsetToSpaLineConverter.cpp  TOffsetToTheoPlaneConverter.cpp  TOffsetToVerPlaneConverter.cpp  TRadialOffsetCnstrConverter.cpp  TRelativeErrorConverter.cpp  TSpatialDistConverter.cpp  TVertDistConverter.cpp  TZenithDistConverter.cpp  TheodoliteConverter.cpp  TheodoliteStationConverter.cpp
Source/LGCProject/: CMakeLists.txt  TLGCApplication.cpp  TLGCApplication.i  TLGCProject.cpp
Source/LGCProjectData/: CMakeLists.txt  InstrumentsCalcRecord.cpp  LSCalcDataSet.cpp  QuantileFunctions.cpp  TLGCCalcParams.cpp  TLGCCalcRecord.cpp  TLGCDataSet.cpp  TLGCObsSummary.cpp  TLGCOutputOptions.cpp  TLGCSimPointSummary.cpp  TLGCSimResults.cpp  TLSCalculation.cpp  TLSConstraintIdentifier.cpp  TLSInputMatricesFiller.cpp  TLSMatricesAdapter.cpp  TLSResultsMatricesExtractor.cpp  TPointNamePair.cpp
Source/LSCalcObservationSet/: CMakeLists.txt  TLSCalcObservationMaker.cpp  TLSCalcWorkingRelativeErrors.cpp  TLSCalcWorkingSpaDistObs.cpp  TLSCalcWorkingZenDistObs.cpp  TWorkingPointNamePairs.cpp
Source/LSCalcObservations/: CMakeLists.txt  TALSCalcAngleObservation.cpp  TALSCalcLengthObservation.cpp  TALSCalcObservation.cpp  TLSCalc2DOffsetObservation.cpp  TLSCalcGyroOrientationObservation.cpp  TLSCalcHorAngleObservation.cpp  TLSCalcHorDistObservation.cpp  TLSCalcOffsetToSpaLineObservation.cpp  TLSCalcOffsetToSpatialLineConstraint.cpp  TLSCalcOffsetToTheoPlaneObservation.cpp  TLSCalcOffsetToVerLineObservation.cpp  TLSCalcOffsetToVerPlaneObservation.cpp  TLSCalcOffsetToVerticalLineObservation.cpp  TLSCalcOrientationCnstrObservation.cpp  TLSCalcPolarObservation.cpp  TLSCalcRadialOffsetCnstrObservation.cpp  TLSCalcRelativeError.cpp  TLSCalcSpatialDistObservation.cpp  TLSCalcVertDistObservation.cpp  TLSCalcWPSObservation.cpp  TLSCalcWTWObservation.cpp  TLSCalcZenithDistObservation.cpp
Source/Measurements/: CMakeLists.txt  T2DOffsetMeasurement.cpp  T2DOffsetROM.cpp  TAFreeInstrumentStation.cpp  TAInstrumentStation.cpp  TAInstrumentStation.h  TALineMeasurement.cpp  TAMeasurement.cpp  TAObjectMeasurement.cpp  TAPlaneMeasurement.cpp  TAPointMeasurement.cpp  TARoundOfMeas.cpp  TAUnreferencedROM.cpp  TAngleConstants.cpp  TDistConstants.cpp  TDistMeasStation.cpp  TGyroOrientationROM.cpp  THorAngleMeasurement.cpp  THorAngleROM.cpp  THorizontalDistMeas.cpp  THorizontalDistROM.cpp  TLevelStation.cpp  TOffsetToSpaLineMeasurement.cpp  TOffsetToTheoPlaneMeasurement.cpp  TOffsetToVerLineMeasurement.cpp  TOffsetToVerPlaneMeasurement.cpp  TOrientationCnstr.cpp  TRadialOffsetCnstr.cpp  TSpatialDistMeasurement.cpp  TSpatialDistROM.cpp  TTheodoliteStation.cpp  TVerticalDistMeasurement.cpp  TVerticalDistROM.cpp  TWPSMeasurement.cpp  TWPSStation.cpp  TWTWDistStation.cpp  TWireToWireDistMeas.cpp  TWorkingConstants.cpp  TWorkingStations.cpp  TZenithDistMeasurement.cpp  (+1 more)
Source/Observation/: CMakeLists.txt  T2DOffsetObservation.cpp  TGyroOrientationObservation.cpp  THorAngleObservation.cpp  THorizontalDistObservation.cpp  TOffsetToSpaLineObservation.cpp  TOffsetToTheoPlaneObservation.cpp  TOffsetToVerLineObservation.cpp  TOffsetToVerPlaneObservation.cpp  TOrientationCnstrObservation.cpp  TRadialOffsetCnstrObservation.cpp  TSpatialDistObservation.cpp  TVertDistObservation.cpp  TWPSObservation.cpp  TWTWObservation.cpp  TZenithDistObservation.cpp
Source/ObservationSet/: CMakeLists.txt  ObservationSet.cpp  TObservationMaker.cpp
Source/ReaderAndWriter/: CMakeLists.txt  TAFileWriter.cpp  TCooFileWriter.cpp  TDefAFileWriter.cpp  TFautFileWriter.cpp  TLGCFileReader.cpp  TMesFileWriter.cpp  TPunchFileWriter.cpp  TRadFileWriter.cpp  TResSimFileWriter.cpp  TResultsFileWriter.cpp  TSimFileWriter.cpp
Source/UnitTests/: CmakeLists.txt  LSCalcObsMakerTest.cpp  TestMaker.cpp  filetester.cpp  lgcFaultDetectWriterTest.cpp  lgcWriterTest.cpp  main.cpp  projectTest.cpp  testLevelling.cpp
Source/measurements/: CMakeLists.txt  EDM.cpp  Level.cpp  Scale.cpp  TAFreeInstrument.cpp  TAInstrument.cpp  TAMeasurement.cpp  TAngleConstants.cpp  TDistConstants.cpp  TOrientationCnstr.cpp  TRadialOffsetCnstr.cpp  (+4 more)
source/: CMakeLists.txt  CPack.cmake  Defaults.h  Doxyfile.in  Global.h  LGCVersion.in  Legacy.h  MainPage.dox  TDataAnalyzer.cpp  TDataAnalyzer.h  TFileLogger.cpp  TFileLogger.h  TInstrumentData.h  TLGCAngle.h  TLGCApp.cpp  TLGCApp.h  TLGCCalculation.cpp  TLGCCalculation.h  TLGCConfig.h  TLGCData.cpp  TLGCData.h  TLSConstraintIdentifier.h  Version.h  main.cpp  tree.h
(+1613 files in other folders)
